# iit-inail2arm-ros-pkg

./: CMakeLists.txt
doc/: URDF INAIL 2 ARM.docx
inail2arm_cartesio/: CMakeLists.txt  package.xml
inail2arm_cartesio/config/: dual_arm_stacked.yaml  dual_arm_weighted.yaml  inail2_dual_arm_simple_stack.yaml  inail2arm_proximity_aware_planning.yaml  inail2arm_simple_stack.yaml
inail2arm_cartesio/launch/: force_estimation.launch  inail2arm_cartesio.launch
inail2arm_cartesio/src/: demo.py
inail2arm_config/: CMakeLists.txt  inail2_dual_arm.yaml  inail2arm_basic.yaml  package.xml  xbot_inail2arm_proximity_aware_planning.yaml
inail2arm_config/ecat/: ecat.bash  ecat_config.yaml
inail2arm_config/hal/: ec_all.yaml  inail2arm_dummy.yaml  inail2arm_gz.yaml
inail2arm_gazebo/: CMakeLists.txt  package.xml
inail2arm_gazebo/launch/: inail2_dual_arm_world.launch  inail2arm_world.launch  inail2arm_world_haria.launch  inail2arm_world_table.launch
inail2arm_gazebo/launch/loaders/: load_inail2arm.launch
inail2arm_gazebo/worlds/: inail2arm.world
inail2arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
inail2arm_moveit_config/config/: cartesian_limits.yaml  chomp_planning.yaml  controllers.yaml  fake_controllers.yaml  gazebo_inail2arm.urdf  inail2arm.srdf  joint_limits.yaml  ompl_planning.yaml  (+4 more)
inail2arm_ros_control/: CMakeLists.txt  README.md  package.xml
inail2arm_ros_control/config/: inail2arm_controllers.yaml
inail2arm_ros_control/launch/: inail2arm_control.launch
inail2arm_srdf/: inail2arm.srdf.xacro  package.xml
inail2arm_urdf/: package.xml
(+62 files in other folders)
