<?xml version="1.0"?>
<package format="2">
  <name>inail2arm_ros_control</name>
  <version>0.0.0</version>
  <description>The inail2arm_ros_control package</description>

  <author email="davide.torielli@iit.it">tori</author>
  <maintainer email="davide.torielli@iit.it">tori</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
